--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+1
+version: 1.0.0+2
 
 environment:
   sdk: '>=3.1.0 <4.0.0'
@@ -39,6 +39,7 @@ dependencies:
   flutter_month_picker: ^0.0.1
   flutter_native_splash: ^2.3.7
   flutter_rating_bar: ^4.0.1
+  flutter_secure_storage: ^9.2.4
   flutter_svg: ^2.0.10+1
   get: ^4.6.6
   http: ^1.0.0
@@ -89,12 +90,6 @@ flutter_native_splash:
 #      image: assets/background_layer_2.png
 #      image_dark: assets/background_layer_2.png
 dev_dependencies:
-
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
   flutter_lints: ^3.0.1
   flutter_test:
     sdk: flutter
