--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,10 @@ dependencies:
   flutter_native_splash: ^2.3.7
   flutter_rating_bar: ^4.0.1
   flutter_secure_storage: ^9.2.4
+  geocoding: ^3.0.0
+  geolocator: ^13.0.2
+  image: ^4.1.3
+  screenshot: ^3.0.0
   flutter_svg: ^2.0.10+1
   get: ^4.6.6
   http: ^1.0.0
@@ -73,7 +77,7 @@ dependencies:
   fluttertoast: ^8.2.4
 
   # Geolocation services
-  geolocator: ^10.1.0
+  # geolocator: ^10.1.0
 
   # Background task scheduler
   workmanager: ^0.5.1
@@ -82,7 +86,6 @@ dependencies:
   wakelock_plus: ^1.2.4
 
   equatable: ^2.0.5
-  geocoding: ^3.0.0
   android_intent_plus: ^5.1.0
   dotted_border: ^2.1.0
   file_picker: ^8.1.2
@@ -166,6 +169,7 @@ flutter:
     - assets/add_a_photo.svg
     - assets/fileuploadicon.svg
     - assets/hrmsgeotrack.sqlite
+    - assets/card_bg_image.jpg
 
   #   - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
