--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,6 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # of the product and file versions while build-number is used as the build suffix.
 version: 3.0.0+3
 # adb connect 192.168.1.13:39923
-
 environment:
   sdk: '>=3.1.0 <4.0.0'
 
@@ -29,25 +28,34 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  android_intent_plus: ^5.1.0
   connectivity: ^3.0.6
   crop_image: ^1.0.13
   cupertino_icons: ^1.0.2
+  dotted_border: ^2.1.0
   dropdown_button2: ^2.3.9
+  equatable: ^2.0.5
+  file_picker: ^8.1.2
   flutter:
     sdk: flutter
+  flutter_background_service: ^2.4.6
+  flutter_background_service_android: ^3.0.3
+  flutter_bloc: ^8.1.2
   flutter_event_calendar: ^1.0.0
   flutter_image_compress: ^2.1.0
+  flutter_local_notifications: ^17.2.3
   flutter_month_picker: ^0.0.1
   flutter_native_splash: ^2.3.7
   flutter_rating_bar: ^4.0.1
   flutter_secure_storage: ^9.2.4
+  flutter_svg: ^2.0.10+1
+  fluttertoast: ^8.2.4
   geocoding: ^3.0.0
   geolocator: ^13.0.2
-  image: ^4.1.3
-  screenshot: ^3.0.0
-  flutter_svg: ^2.0.10+1
   get: ^4.6.6
+  google_maps_flutter: ^2.10.1
   http: ^1.0.0
+  image: ^4.1.3
   image_cropper: ^1.4.1
   image_picker: ^1.0.7
   intl: ^0.17.0
@@ -58,39 +66,16 @@ dependencies:
   path: ^1.8.0
   path_provider: ^2.0.10
   permission_handler: ^11.0.1
+  photo_view: ^0.15.0
   provider: ^6.1.2
+  screenshot: ^3.0.0
   shared_preferences: ^2.2.2
+  sqflite: ^2.3.0
   syncfusion_flutter_calendar: ^21.2.3
   timeago: ^3.3.0
-  sqflite: ^2.3.0  # Ensure you're using the latest version
-  # Background services
-  flutter_background_service: ^2.4.6
-  flutter_background_service_android: ^3.0.3
-  # State management (BLoC)
-  flutter_bloc: ^8.1.2
-
-
-  # Local notifications
-  flutter_local_notifications: ^17.2.3
-
-  # Toast notifications
-  fluttertoast: ^8.2.4
-
-  # Geolocation services
-  # geolocator: ^10.1.0
-
-  # Background task scheduler
-  workmanager: ^0.5.1
-
-  # Prevent screen from sleeping
-  wakelock_plus: ^1.2.4
-
-  equatable: ^2.0.5
-  android_intent_plus: ^5.1.0
-  dotted_border: ^2.1.0
-  file_picker: ^8.1.2
-  photo_view: ^0.15.0
   url_launcher: ^6.3.0
+  wakelock_plus: ^1.2.4
+  workmanager: ^0.5.1
 
 flutter_native_splash:
   # background color for the splash screen
