--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   flutter_background_service: ^2.4.6
   flutter_background_service_android: ^3.0.3
   flutter_bloc: ^8.1.2
+  flutter_carousel_widget: ^3.1.0
   flutter_event_calendar: ^1.0.0
   flutter_image_compress: ^2.1.0
   flutter_local_notifications: ^17.2.3
