--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -77,6 +77,11 @@ dependencies:
   url_launcher: ^6.3.0
   wakelock_plus: ^1.2.4
   workmanager: ^0.5.1
+  crypto: ^3.0.3
+  skeletonizer: ^1.4.3
+
+
+
 
 flutter_native_splash:
   # background color for the splash screen
@@ -164,6 +169,7 @@ flutter:
     - assets/addlead.svg
     - assets/calendar-day.svg
     - assets/refresh.svg
+    - assets/backup.svg
 
 
 
