Worked on filter in myleaves and birthday banners in home

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -170,6 +170,7 @@ flutter:
     - assets/calendar-day.svg
     - assets/refresh.svg
     - assets/backup.svg
+    - assets/birthday_cake2.jpg
 
 
 
