profile UI changes

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -173,6 +173,9 @@ flutter:
     - assets/refresh.svg
     - assets/backup.svg
     - assets/birthday_cake2.jpg
+    - assets/venusmars.svg
+    - assets/idbadge.svg
+    - assets/employeeman.svg
 
 
 
